--- a/src/_patterns/02-components/components-all/components-all.scss
+++ b/src/_patterns/02-components/components-all/components-all.scss
@@ -27,6 +27,7 @@
 @import '@bolt/components-unordered-list';
 @import '@bolt/components-sticky';
 @import '@bolt/components-nav-bar';
+@import '@bolt/components-breadcrumb';
 @import '@bolt/components-teaser'; // tiny amount of styling
 // @import '@bolt/components-chip-list'; // No styles
 // @import '@bolt/components-critical-path'; // No styles
