--- a/packages/components/bolt-ordered-list/ordered-list.twig
+++ b/packages/components/bolt-ordered-list/ordered-list.twig
@@ -27,7 +27,6 @@
   baseClass
 ] %}
 
-
 <bolt-{{ componentName }} bolt-component>
   <ol {{ attributes.addClass(classes) }}>
     {% for listItem in contentItems %}
@@ -43,3 +42,7 @@
     {% endfor %}
   </ol>
 </bolt-{{ componentName }}>
+
+{% if enable_json_schema_validation %}
+  {{ validate_data_schema('@bolt-components-ordered-list/ordered-list.schema.yml', _self) }}
+{% endif %}
