--- a/packages/components/bolt-nav-bar/src/nav-bar.twig
+++ b/packages/components/bolt-nav-bar/src/nav-bar.twig
@@ -135,3 +135,7 @@
   {% endembed %}
 
 </bolt-{{ componentName }}>
+
+{% if enable_json_schema_validation %}
+  {{ validate_data_schema('@bolt-components-nav-bar/nav-bar.schema.yml', _self) }}
+{% endif %}
