chore: re-enabling PL CSS and JavaScript

--- a/src/_meta/_00-head.twig
+++ b/src/_meta/_00-head.twig
@@ -20,7 +20,7 @@
 
     <link rel="stylesheet" href="../../../styles/bolt.css?{{ cacheBuster }}">
 
-    {# patternLabHead | raw #}
+    {{ patternLabHead | raw }}
 
   </head>
   <body class="{{ bodyClass }} c-bolt-site">
