--- a/src/_meta/_01-foot.twig
+++ b/src/_meta/_01-foot.twig
@@ -1,6 +1,6 @@
 
   <!--DO NOT REMOVE-->
-  {# patternLabFoot | raw #}
+    {{ patternLabFoot | raw }}
 
     {# <script src="/scripts/bolt-app.min.js" async type="module"></script> #}
     <script src="/scripts/bolt.min.js" async></script>
