fix: removing default icon size value specified so inheritted size of parent gets used

--- a/src/_patterns/02-components/bolt-icon/src/icon.twig
+++ b/src/_patterns/02-components/bolt-icon/src/icon.twig
@@ -6,7 +6,7 @@
 {% set attributes = attributes
   .setAttribute("name", name)
   .setAttribute("background", background)
-  .setAttribute("size", size ? size : "medium")
+  .setAttribute("size", size)
   .setAttribute("color", color)
 %}
 
