add theme variations

--- a/apps/pattern-lab--workshop/src/_patterns/02-components/blockquote/10-blockquote-alignItems-variation.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/blockquote/10-blockquote-alignItems-variation.twig
@@ -2,8 +2,20 @@
 
 {% for alignItems in schema.properties.alignItems.enum %}
   <p>alignItems: {{ alignItems }}</p>
-  {% include '05-blockquote.twig' with {
+  {% include "@bolt-components-blockquote/blockquote.twig" with {
     alignItems: alignItems,
+    logo: {
+      invert: true,
+      src: "/assets/images/content/logos/logo-paypal.svg"
+    },
+    content: "<p>The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.</p>",
+    author: {
+      image: {
+        src: "/assets/images/placeholders/500x500.jpg"
+      },
+      name: "Michelangelo di Lodovico Buonarroti Simoni",
+      title: "Renaissance Artist"
+    }
   } %}
 
 {% endfor %}
