--- a/apps/bolt-site--storefront/templates/default.twig
+++ b/apps/bolt-site--storefront/templates/default.twig
@@ -39,7 +39,8 @@
     </footer>
   </div>
 </div>
-{#<script src="js/main.js"></script>#}
+
+<script src="/build/bolt-global.js"></script>
 
 <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
 {#<script>#}
