--- a/apps/pattern-lab--workshop/src/_patterns/02-components/blockquote/10-blockquote-alignItems-variation.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/blockquote/10-blockquote-alignItems-variation.twig
@@ -11,7 +11,8 @@
     content: "<p>The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.</p>",
     author: {
       image: {
-        src: "/assets/images/placeholders/500x500.jpg"
+        src: "/assets/images/placeholders/500x500.jpg",
+        lazyload: false
       },
       name: "Michelangelo di Lodovico Buonarroti Simoni",
       title: "Renaissance Artist"
