--- a/apps/pattern-lab--workshop/src/_patterns/02-components/blockquote/15-blockquote-indent-variation.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/blockquote/15-blockquote-indent-variation.twig
@@ -1,5 +1,9 @@
-<p>Indent: true</p>
-{% include '05-blockquote.twig' with {
-  indent: true,
-} %}
+{% set schema = get_data('@bolt-components-blockquote/blockquote.schema.yml') %}
+
+{% for indent in schema.properties.indent.enum %}
+  <p>Indent: {{ indent }}</p>
+  {% include '@bolt-components-blockquote/blockquote.twig' with {
+    indent: indent == 'true',
+  } %}
+{% endfor %}
 
