--- a/src/_patterns/02-components/bolt-button/src/button.scss
+++ b/src/_patterns/02-components/bolt-button/src/button.scss
@@ -157,6 +157,11 @@ $bolt-button-translate--active: translate3d(0, 1px, 0);
   }
 }
 
+// TODO: move to utils. temp workaround to flash of unstyled text in IE11
+.u-bolt-transitionless {
+  transition: none !important;
+}
+
 @mixin bolt-button {
   @include bolt-reset-button-styles;
   @include bolt-no-select;
@@ -317,8 +322,8 @@ bolt-button {
 }
 
 
-
-._c-bolt-button--theme-override {
+// Allow forcing light and xlight theme colors in IE11 until http://vjira2:8080/browse/BK-48 is resolved.
+._c-bolt-button--theme-override .c-bolt-button {
   .t-bolt-xlight &,
   .t-bolt-light & {
     $fallback-background-default: bolt-color(indigo, light);
