--- a/apps/pattern-lab--workshop/src/_patterns/04-page-examples/30-product-pages/product-t2-page.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/04-page-examples/30-product-pages/product-t2-page.twig
@@ -418,7 +418,7 @@
           text: "Article"
         },
         "logo": {
-          src: "/images/sample/PayPal-logo.svg"
+          src: "/images/content/logos/logo-paypal.svg"
         },
         "headlines": [
           {
@@ -568,12 +568,13 @@
           border: "horizontal",
           alignItems: "center",
           logo: {
-            src: "/images/sample/PayPal-logo.svg",
+            src: "/images/content/logos/logo-paypal.svg",
             invert: true
           },
           author: {
             image: {
-              src: "/images/placeholders/500x500.jpg"
+              src: "/images/placeholders/500x500.jpg",
+              lazyload: false
             },
             name: "Jessica Cuthbertson",
             title: "CEO, RBS"
