add device viewer componenet

--- a/apps/pattern-lab--workshop/src/_patterns/02-components/chip/00-chip-docs.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/chip/00-chip-docs.twig
@@ -1,7 +1,7 @@
 {% set schema = get_data('@bolt-components-chip/chip.schema.yml') %}
 {% set readme = source('@bolt-components-chip/README.md') %}
 {% set code %} {% verbatim %}
-{% include "@bolt/chip.twig" with {
+{% include "@bolt-components-chip/chip.twig" with {
     text: "This is a chip",
     url: "http://google.com",
   } only %}
