--- a/src/_patterns/02-components/bolt-search/src/search.scss
+++ b/src/_patterns/02-components/bolt-search/src/search.scss
@@ -163,7 +163,7 @@ select {
 
 
 // Checkbox and Radio Inputs
-$bolt-inline-label-transition: $bolt-transition;
+$bolt-inline-label-transition: $bolt-transition-timing cubic-bezier(0.45,1.8,0.5,0.75);
 $bolt-inline-label-input-color: bolt-color(indigo, light);
 $bolt-inline-label-input-border-color: rgba(bolt-color(indigo, light), 0.25); // TODO: [Mai] This is the theme link color at 25%
 $bolt-inline-label-input-border-style: $bolt-border-style;
@@ -171,8 +171,8 @@ $bolt-inline-label-input-border-width: $bolt-border-width;
 
 // Data Inputs
 $bolt-floating-label-text-scale: bolt-strip-unit($bolt-font-size--xsmall);
-$bolt-floating-label-text-color: bolt-color(indigo, light);
-$bolt-floating-label-text-indent: bolt-spacing(small);
+$bolt-floating-label-text-color: bolt-color(indigo, light); // TODO: [Mai] This is the theme link color
+$bolt-floating-label-text-indent: calc(#{bolt-spacing(small)} + 2px);
 $bolt-floating-label-transition: $bolt-transition;
 
 $bolt-input-text-color: bolt-color(gray, xdark); // TODO: [Mai] This is the theme text color
@@ -225,9 +225,19 @@ $bolt-input-transition: $bolt-transition;
   border-radius: $bolt-input-border-radius;
   background-color: $bolt-input-background-color;
   opacity: 1; // [Mai] Reset mobile Safari browser default.
-  appearance: none !important; // [Mai] Reset mobile Safari browser default.
   outline: none;
   transition: all $bolt-input-transition;
+
+  // Removing native controls
+  -webkit-appearance: none !important;
+  -moz-appearance: window;
+  appearance: none !important; // [Mai] Reset mobile Safari browser default.
+
+  &::-ms-expand
+  {
+    display: none;
+  }
+  // Removing native controls
 
   &.is-invalid,
   &.is-touched:invalid {
@@ -276,6 +286,7 @@ $bolt-input-transition: $bolt-transition;
   color: $bolt-floating-label-text-color;
   line-height: $bolt-floating-label-text-scale;
   white-space: nowrap;
+  user-select: none;
   opacity: 0;
   transform: translate3d(0, -15%, 0) scale(0.2);
   transform-origin: 0 100%;
@@ -296,6 +307,7 @@ $bolt-input-transition: $bolt-transition;
   display: inline-block;
   position: relative;
   cursor: pointer;
+  user-select: none;
 
   &:before,
   &:after {
@@ -315,21 +327,26 @@ $bolt-input-transition: $bolt-transition;
   }
 
   &:after {
-    top: calc(0.3rem + 3px);
-    left: 3px;
-    width: calc(1rem - 6px);
-    height: calc(1rem - 6px);
     content: '';
-    background-color: $bolt-inline-label-input-color;
     opacity: 0;
-    transform: scale(0.1);
+    transform-origin: center;
   }
 }
 
 .c-bolt-inline-label--checkbox {
-  &:before,
-  &:after {
+  &:before {
     border-radius: 2px;
+  }
+
+  &:after {
+    top: 0.4rem;
+    left: 0.375rem;
+    width: calc(1rem - 0.675rem);
+    height: calc(1rem - 0.325rem);
+    border-color: $bolt-inline-label-input-color;
+    border-style: solid;
+    border-width: 0 2px 2px 0;
+    transform: rotate(45deg) scale(0.1);
   }
 }
 
@@ -337,6 +354,15 @@ $bolt-input-transition: $bolt-transition;
   &:before,
   &:after {
     border-radius: 1rem;
+  }
+
+  &:after {
+    top: calc(0.3rem + 3px);
+    left: 3px;
+    width: calc(1rem - 6px);
+    height: calc(1rem - 6px);
+    background-color: $bolt-inline-label-input-color;
+    transform: scale(0.1);
   }
 }
 
@@ -362,7 +388,6 @@ $bolt-input-transition: $bolt-transition;
 
     &:after {
       opacity: 1;
-      transform: scale(1);
     }
 
     .c-bolt-inline-label__emphasize {
@@ -371,20 +396,36 @@ $bolt-input-transition: $bolt-transition;
   }
 }
 
+.c-bolt-input--checkbox {
+  &:checked ~ .c-bolt-inline-label {
+    &:after {
+      transform: rotate(45deg) scale(1);
+    }
+  }
+}
+
+.c-bolt-input--radio {
+  &:checked ~ .c-bolt-inline-label {
+    &:after {
+      transform: scale(1);
+    }
+  }
+}
+
 .c-bolt-input-icons {
-  @include bolt-padding(0.65em small 0.65em 0);
+  @include bolt-padding(0.65rem small 0.35rem 0);
 
   position: absolute;
   top: 1px;
   right: 1px;
+  pointer-events: none;
   border-radius: $bolt-input-border-radius;
   background-color: $bolt-input-background-color;
-  pointer-events: none;
 
   &:before {
     position: absolute;
     top: 0;
-    left: -1rem;
+    left: -.95rem;
     width: 1rem;
     height: 100%;
     content: '';
@@ -510,11 +551,8 @@ $bolt-strength-indicator-transition: $bolt-transition;
   @include bolt-margin-bottom(medium);
   display: inline-flex;
   flex-wrap: nowrap;
-  border-color: $bolt-input-border-color;
-  border-style: $bolt-input-border-style;
-  border-width: $bolt-input-border-width;
   border-radius: $bolt-input-border-radius;
-  background-color: bolt-color(indigo, xxlight);
+  background-color: $bolt-input-border-color;
 
   &:last-child {
     @include bolt-margin-bottom(0);
@@ -522,23 +560,29 @@ $bolt-strength-indicator-transition: $bolt-transition;
 }
 
 .c-bolt-toggle__item {
-  flex: 1;
 }
 
 .c-bolt-toggle__item-input {
   @include bolt-visuallyhidden;
 
   &:checked + .c-bolt-toggle__item-label {
-    @include bolt-margin(($bolt-input-border-width * -1));
     border-color: $bolt-input-border-color;
-    border-style: $bolt-input-border-style;
-    border-width: $bolt-input-border-width;
-    border-radius: $bolt-input-border-radius;
     background-color: bolt-color(white);
+  }
+
+  &:focus + .c-bolt-toggle__item-label {
+    box-shadow: $bolt-input-box-shadow--focus;
   }
 }
 
 .c-bolt-toggle__item-label {
+  @include bolt-margin(($bolt-input-border-width * -1));
+  @include bolt-padding(0.65rem 0.75rem);
   display: block;
-  transition: background-color $bolt-input-transition;
+  cursor: pointer;
+  border-color: transparent;
+  border-style: $bolt-input-border-style;
+  border-width: $bolt-input-border-width;
+  border-radius: $bolt-input-border-radius;
+  transition: all $bolt-input-transition;
 }
