--- a/apps/bolt-site--storefront/templates/default.twig
+++ b/apps/bolt-site--storefront/templates/default.twig
@@ -48,6 +48,17 @@
   </div>
 </div>
 
+{# Shows Twig Vars in Browser Console #}
+<script type="application/json">{{ _context|json_encode()|raw }}</script>
+<script>
+  (function () {
+    var me = document.currentScript;
+    var jsonScriptTag = me.previousElementSibling.innerHTML;
+    var data = JSON.parse(jsonScriptTag);
+    console.log('Twig vars for this page: ', data);
+  })();
+</script>
+
 <script src="/build/bolt-global.js"></script>
 
 <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
