Adding edit on GitHub link

--- a/apps/bolt-site--storefront/templates/site.twig
+++ b/apps/bolt-site--storefront/templates/site.twig
@@ -43,6 +43,8 @@
       <p>
         <strong>Copyright &copy; 2017 Pegasystems, Inc.</strong>
       </p>
+      {% set gitBranch = 'epic/refactor' %}
+      <p><a href="https://github.com/bolt-design-system/bolt/blob/{{ gitBranch }}/apps/bolt-site--storefront/{{ page.srcPath }}">Edit this page on GitHub</a></p>
     </footer>
   </div>
 </div>
